--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: 
+name: Para sa mga bumitaw
 
 # Short bio or description (displayed in the header)
 description: 6e646fe6c6ca65722c9
