--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Para sa mga bumitaw
+name: o6nt Talks
 
 # Short bio or description (displayed in the header)
-description: 6e646fe6c6ca65722c9
+description: 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: #
